--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -245,31 +245,33 @@ brython_div1 &lt;= "7. " + html.A("41223147", href="https://mdecd2025.github.io/
 <p>41223110</p>
 <p>41223125</p>
 <p>41223129</p>
-<p>41223132</p>
+<p><a href="/downloads/ex1.zip">41223132</a></p>
 <p>41223147</p><h1>Exam2</h1>
-<h1>Exam3</h1>
+<p>41223110</p>
+<p>41223125</p>
+<p>41223129</p>
+<p><a href="/downloads/41223132_ex2.zip">41223132</a></p>
+<p>41223147</p><h1>Exam3</h1>
 <h2>3-1video</h2>
 <p><a href="/downloads/41223147Exam3-1.7z">41223147Exam3-1.7z</a></p>
 <p>41223110</p>
 <p>41223125</p>
 <p>41223129</p>
-<p>41223132</p>
+<p><a href="/downloads/ex3-1.zip">41223132</a></p>
 <p>伺服端</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/tI1pNMyRWQ4?si=hlksJu3TES9L5vES" title="YouTube video player" width="560"></iframe></p>
 <p>客戶端</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/hRGl-pyPu9o?si=lmLZlNPX0vYK5WgK" title="YouTube video player" width="560"></iframe></p>
 <p>41223147</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/ij0HYycLWVw?si=hgvX7n449rSYOIii" title="YouTube video player" width="450"></iframe></p>
-<h2>3-2video</h2>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/ij0HYycLWVw?si=hgvX7n449rSYOIii" title="YouTube video player" width="450"></iframe></p><h2>3-2video</h2>
 <p><a href="/downloads/Exam3-2_ag6.zip">/downloads/Exam3-2_ag6.zip</a></p>
 <p><a href="/downloads/41223147Exam3-2.7z">41223147Exam3-2.7z</a></p>
 <p>41223110</p>
 <p>41223125</p>
 <p>41223129</p>
-<p>41223132</p>
+<p><a href="/downloads/41223132ex3-2.zip">41223132</a></p>
 <p>41223147</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/72YDoXhGhnE?si=WNCf8-x6WGd_AEak" title="YouTube video player" width="450"></iframe></p>
-<h2>3-3video</h2>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/72YDoXhGhnE?si=WNCf8-x6WGd_AEak" title="YouTube video player" width="450"></iframe></p><h2>3-3video</h2>
 <p><a href="/downloads/41223147Exam3-3.7z">41223147Exam3-3.7z</a></p>
 <p>41223110</p>
 <p>41223125</p>
