--- a/content/Exam1.html
+++ b/content/Exam1.html
@@ -146,7 +146,7 @@ img.add_border {
 <p>41223110</p>
 <p>41223125</p>
 <p>41223129</p>
-<p>41223132</p>
+<p><a href="./../downloads/ex1.zip">41223132</a></p>
 <p>41223147</p><br />w3 << <a href='w3.html'>Previous</a> <a href='Exam2.html'>Next</a> >> Exam2</div>
         
     <!-- footer -->
