--- a/content/3-1video.html
+++ b/content/3-1video.html
@@ -147,14 +147,13 @@ img.add_border {
 <p>41223110</p>
 <p>41223125</p>
 <p>41223129</p>
-<p>41223132</p>
+<p><a href="./../downloads/ex3-1.zip">41223132</a></p>
 <p>伺服端</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/tI1pNMyRWQ4?si=hlksJu3TES9L5vES" title="YouTube video player" width="560"></iframe></p>
 <p>客戶端</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/hRGl-pyPu9o?si=lmLZlNPX0vYK5WgK" title="YouTube video player" width="560"></iframe></p>
 <p>41223147</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/ij0HYycLWVw?si=hgvX7n449rSYOIii" title="YouTube video player" width="450"></iframe></p>
-<br />Exam3 << <a href='Exam3.html'>Previous</a> <a href='3-2video.html'>Next</a> >> 3-2video</div>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/ij0HYycLWVw?si=hgvX7n449rSYOIii" title="YouTube video player" width="450"></iframe></p><br />Exam3 << <a href='Exam3.html'>Previous</a> <a href='3-2video.html'>Next</a> >> 3-2video</div>
         
     <!-- footer -->
       <div class="container">
