--- a/content/3-3video.html
+++ b/content/3-3video.html
@@ -147,10 +147,9 @@ img.add_border {
 <p>41223110</p>
 <p>41223125</p>
 <p>41223129</p>
-<p>41223132</p>
+<p><a href="./../downloads/41223132 ex3-3.zip">41223132</a></p>
 <p>41223147</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/q20s75eIMEk?si=DvJXuVFIMumHTwhs" title="YouTube video player" width="450"></iframe></p>
-<br />3-2video << <a href='3-2video.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/q20s75eIMEk?si=DvJXuVFIMumHTwhs" title="YouTube video player" width="450"></iframe></p><br />3-2video << <a href='3-2video.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
         
     <!-- footer -->
       <div class="container">
