--- a/content/Exam2.html
+++ b/content/Exam2.html
@@ -146,7 +146,7 @@ img.add_border {
 <p>41223110</p>
 <p>41223125</p>
 <p>41223129</p>
-<p>41223132</p>
+<p><a href="./../downloads/41223132_ex2.zip">41223132</a></p>
 <p>41223147</p><br />Exam1 << <a href='Exam1.html'>Previous</a> <a href='Exam3.html'>Next</a> >> Exam3</div>
         
     <!-- footer -->
