--- a/config/content.htm
+++ b/config/content.htm
@@ -246,7 +246,10 @@ brython_div1 &lt;= "7. " + html.A("41223147", href="https://mdecd2025.github.io/
 <p>41223125</p>
 <p>41223129</p>
 <p><a href="/downloads/ex1.zip">41223132</a></p>
-<p>41223147</p><h1>Exam2</h1>
+<p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/Fek-tfnmZWQ" width="450"></iframe></p>
+<p>41223147</p>
+<p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/5LN6u4CbMZ4" width="450"></iframe></p>
+<p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/PYe-g4ZC3-Y" width="450"></iframe></p><h1>Exam2</h1>
 <p>41223110</p>
 <p>41223125</p>
 <p>41223129</p>
