--- a/content/Exam1.html
+++ b/content/Exam1.html
@@ -147,7 +147,10 @@ img.add_border {
 <p>41223125</p>
 <p>41223129</p>
 <p><a href="./../downloads/ex1.zip">41223132</a></p>
-<p>41223147</p><br />w3 << <a href='w3.html'>Previous</a> <a href='Exam2.html'>Next</a> >> Exam2</div>
+<p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/Fek-tfnmZWQ" width="450"></iframe></p>
+<p>41223147</p>
+<p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/5LN6u4CbMZ4" width="450"></iframe></p>
+<p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/PYe-g4ZC3-Y" width="450"></iframe></p><br />w3 << <a href='w3.html'>Previous</a> <a href='Exam2.html'>Next</a> >> Exam2</div>
         
     <!-- footer -->
       <div class="container">
