--- a/content/Exam1.html
+++ b/content/Exam1.html
@@ -144,8 +144,11 @@ img.add_border {
         </header>
     <div id="tipue_search_content">w3 << <a href='w3.html'>Previous</a> <a href='Exam2.html'>Next</a> >> Exam2<br /><h1>Exam1</h1>
 <p>41223110</p>
+<p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/H8hbJ8vlitc" width="450"></iframe></p>
 <p>41223125</p>
+<p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/0mp5y9dkqc8" width="450"></iframe></p>
 <p>41223129</p>
+<p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/d6XNWPZjSsM" width="450"></iframe></p>
 <p><a href="./../downloads/ex1.zip">41223132</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/Fek-tfnmZWQ" width="450"></iframe></p>
 <p>41223147</p>
