--- a/config/content.htm
+++ b/config/content.htm
@@ -254,8 +254,11 @@ brython_div1 &lt;= "7. " + html.A("41223147", href="https://mdecd2025.github.io/
 <p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/5LN6u4CbMZ4" width="450"></iframe></p>
 <p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/PYe-g4ZC3-Y" width="450"></iframe></p><h1>Exam2</h1>
 <p>41223110</p>
+<p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/Q7j2O-UQXss" width="450"></iframe></p>
 <p>41223125</p>
+<p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/S7xG5hRh46Q" width="450"></iframe></p>
 <p>41223129</p>
+<p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/4Ou6P9H8rOI" width="450"></iframe></p>
 <p><a href="/downloads/41223132_ex2.zip">41223132</a></p>
 <p>41223147</p><h1>Exam3</h1>
 <h2>3-1video</h2>
