--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -243,8 +243,11 @@ brython_div1 &lt;= "7. " + html.A("41223147", href="https://mdecd2025.github.io/
 <p><span>1. </span><a href="https://mdecd2025.github.io/2a-ag6/">2a-ag6</a><a href="https://github.com/mdecd2025/2a-ag6">(repo)</a><br/><span>2. </span><a href="https://mdecd2025.github.io/hw-41223110/">41223110</a><a href="https://github.com/mdecd2025/hw-41223110">(repo)</a><br/><span>3. </span><a href="https://mdecd2025.github.io/hw-Linjiahong41223125/">41223125</a><a href="https://github.com/mdecd2025/hw-Linjiahong41223125">(repo)</a><br/><span>4. </span><a href="https://mdecd2025.github.io/hw-hong41223129/">41223129</a><a href="https://github.com/mdecd2025/hw-hong41223129">(repo)</a><br/><span>5. </span><a href="https://mdecd2025.github.io/hw-CHN41223132/">41223132</a><a href="https://github.com/mdecd2025/hw-CHN41223132">(repo)</a><br/><span>6. </span><a href="https://mdecd2025.github.io/hw-41223133/">41223133</a><a href="https://github.com/mdecd2025/hw-41223133">(repo)</a><br/><span>7. </span><a href="https://mdecd2025.github.io/hw-41223147/">41223147</a><a href="https://github.com/mdecd2025/hw-41223147">(repo)</a></p>
 <h1>Exam1</h1>
 <p>41223110</p>
+<p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/H8hbJ8vlitc" width="450"></iframe></p>
 <p>41223125</p>
+<p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/0mp5y9dkqc8" width="450"></iframe></p>
 <p>41223129</p>
+<p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/d6XNWPZjSsM" width="450"></iframe></p>
 <p><a href="/downloads/ex1.zip">41223132</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/Fek-tfnmZWQ" width="450"></iframe></p>
 <p>41223147</p>
