--- a/content/Exam2.html
+++ b/content/Exam2.html
@@ -150,7 +150,10 @@ img.add_border {
 <p>41223129</p>
 <p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/4Ou6P9H8rOI" width="450"></iframe></p>
 <p><a href="./../downloads/41223132_ex2.zip">41223132</a></p>
-<p>41223147</p><br />Exam1 << <a href='Exam1.html'>Previous</a> <a href='Exam3.html'>Next</a> >> Exam3</div>
+<p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/qZi9-uK8WtU" width="450"></iframe></p>
+<p>41223147</p>
+<p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/dkK98S6mVx0" width="450"></iframe></p>
+<p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/215R9gyCpOw" width="450"></iframe></p><br />Exam1 << <a href='Exam1.html'>Previous</a> <a href='Exam3.html'>Next</a> >> Exam3</div>
         
     <!-- footer -->
       <div class="container">
