--- a/content/3-1video.html
+++ b/content/3-1video.html
@@ -145,8 +145,11 @@ img.add_border {
     <div id="tipue_search_content">Exam3 << <a href='Exam3.html'>Previous</a> <a href='3-2video.html'>Next</a> >> 3-2video<br /><h1>3-1video</h1>
 <p><a href="./../downloads/41223147Exam3-1.7z">41223147Exam3-1.7z</a></p>
 <p>41223110</p>
+<p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/ocVlCANGrjE" width="450"></iframe></p>
 <p>41223125</p>
+<p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/BJ3XcAwn2D8" width="450"></iframe></p>
 <p>41223129</p>
+<p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/GnWc9Qjb7SA" width="450"></iframe></p>
 <p><a href="./../downloads/ex3-1.zip">41223132</a></p>
 <p>伺服端</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/tI1pNMyRWQ4?si=hlksJu3TES9L5vES" title="YouTube video player" width="560"></iframe></p>
