--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -260,7 +260,10 @@ brython_div1 &lt;= "7. " + html.A("41223147", href="https://mdecd2025.github.io/
 <p>41223129</p>
 <p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/4Ou6P9H8rOI" width="450"></iframe></p>
 <p><a href="/downloads/41223132_ex2.zip">41223132</a></p>
-<p>41223147</p><h1>Exam3</h1>
+<p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/qZi9-uK8WtU" width="450"></iframe></p>
+<p>41223147</p>
+<p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/dkK98S6mVx0" width="450"></iframe></p>
+<p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/215R9gyCpOw" width="450"></iframe></p><h1>Exam3</h1>
 <h2>3-1video</h2>
 <p><a href="/downloads/41223147Exam3-1.7z">41223147Exam3-1.7z</a></p>
 <p>41223110</p>
