--- a/content/3-3video.html
+++ b/content/3-3video.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Final.html'>Final</a><li class='has-children'><a href='task.html'>task</a><ul class='dropdown'><li><a href='task1.html'>task1</a><li><a href='task2.html'>task2</a><li><a href='task3.html'>task3</a><li><a href='task4.html'>task4</a><li><a href='task5.html'>task5</a></li></ul><li><a href='w3.html'>w3</a><li><a href='Exam1.html'>Exam1</a><li><a href='Exam2.html'>Exam2</a><li class='has-children'><a href='Exam3.html'>Exam3</a><ul class='dropdown'><li><a href='3-1video.html'>3-1video</a><li><a href='3-2video.html'>3-2video</a><li><a href='3-3video.html'>3-3video</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Final.html'>Final</a><li class='has-children'><a href='task.html'>task</a><ul class='dropdown'><li><a href='task1.html'>task1</a><li><a href='task2.html'>task2</a><li><a href='task3.html'>task3</a><li><a href='task4.html'>task4</a><li><a href='task5.html'>task5</a></li></ul><li><a href='w3.html'>w3</a><li><a href='Exam1.html'>Exam1</a><li><a href='Exam2.html'>Exam2</a><li class='has-children'><a href='Exam3.html'>Exam3</a><ul class='dropdown'><li><a href='3-1video.html'>3-1video</a><li><a href='3-2video.html'>3-2video</a><li><a href='3-3video.html'>3-3video</a><li><a href='Experience.html'>Experience</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">3-2video << <a href='3-2video.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>3-3video</h1>
+    <div id="tipue_search_content">3-2video << <a href='3-2video.html'>Previous</a> <a href='Experience.html'>Next</a> >> Experience<br /><h1>3-3video</h1>
 <p><a href="./../downloads/41223147Exam3-3.7z">41223147Exam3-3.7z</a></p>
 <p>41223110</p>
 <p>41223125</p>
@@ -150,7 +150,8 @@ img.add_border {
 <p>41223129</p>
 <p><a href="./../downloads/41223132 ex3-3.zip">41223132</a></p>
 <p>41223147</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/q20s75eIMEk?si=DvJXuVFIMumHTwhs" title="YouTube video player" width="450"></iframe></p><br />3-2video << <a href='3-2video.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/q20s75eIMEk?si=DvJXuVFIMumHTwhs" title="YouTube video player" width="450"></iframe></p>
+<br />3-2video << <a href='3-2video.html'>Previous</a> <a href='Experience.html'>Next</a> >> Experience</div>
         
     <!-- footer -->
       <div class="container">
