ADD 41223125 Exam-3-2 影片

--- a/config/content.htm
+++ b/config/content.htm
@@ -286,11 +286,11 @@ brython_div1 &lt;= "7. " + html.A("41223147", href="https://mdecd2025.github.io/
 <p><a href="/downloads/41223147Exam3-2.7z">41223147Exam3-2.7z</a></p>
 <p>41223110</p>
 <p>41223125</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/GJCL5xSTpuY" width="450"></iframe></p>
 <p>41223129</p>
 <p><a href="/downloads/41223132ex3-2.zip">41223132</a></p>
 <p>41223147</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/72YDoXhGhnE?si=WNCf8-x6WGd_AEak" title="YouTube video player" width="450"></iframe></p>
-<h2>3-3video</h2>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/72YDoXhGhnE?si=WNCf8-x6WGd_AEak" title="YouTube video player" width="450"></iframe></p><h2>3-3video</h2>
 <p><a href="/downloads/41223147Exam3-3.7z">41223147Exam3-3.7z</a></p>
 <p>41223110</p>
 <p>41223125</p>
