--- a/content/Experience.html
+++ b/content/Experience.html
@@ -145,6 +145,7 @@ img.add_border {
     <div id="tipue_search_content">3-3video << <a href='3-3video.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>Experience</h1>
 <p><span>41223110:</span></p>
 <p><span>41223125:</span></p>
+<p><span>一切都從模仿開始，在初期根本完全無從下手，只能到他人網站上觀摩，或從他人成品中找出發點，也又是完全沒有搞懂它的運作模式。在考試三中使用IPV6來進行webotsw --steam 內建的動態連結並以server端讓 client端連接後進行控制，一個伺服端可讓多個客戶端連接並在內部webotsw串流執行導入建模及程式的遠端線上控制，而在之中因為基本功不夠時常卡住不知該如何解決，連使用GPT得到文字敘述後也不清楚問題應該從何處解決，這種拋之心血卻無果的心情真的很無助。</span></p>
 <p><span>41223129:</span></p>
 <p><span>41223132:</span></p>
 <p><span>41223147:</span></p><br />3-3video << <a href='3-3video.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
