--- a/content/3-2video.html
+++ b/content/3-2video.html
@@ -146,6 +146,7 @@ img.add_border {
 <p><a href="./../downloads/Exam3-2_ag6.zip">/downloads/Exam3-2_ag6.zip</a></p>
 <p><a href="./../downloads/41223147Exam3-2.7z">41223147Exam3-2.7z</a></p>
 <p>41223110</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/zLgNR7Z_PGo?si=D20zMrtplpP6UdDz" title="YouTube video player" width="560"></iframe></p>
 <p>41223125</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/GJCL5xSTpuY" width="450"></iframe></p>
 <p>41223129</p>
