--- a/config/content.htm
+++ b/config/content.htm
@@ -20,7 +20,7 @@
 <p style="padding-left: 30px;"><span>操作者可利用鍵盤特定按鍵控制投籃輪車的移動並發射投籃, 每投出一球後系統透過記分板進行計分, 並由送球機構進行補球或移動輪車取球, 遊戲可進行至全部數量籃球投完為止.</span></p>
 <p>請將期末協同專案執行過程、內容與心得, 製作成影片，配合字幕上傳至 Youtube 後嵌入各階段的期末報告頁面中.</p>
 <p>影片標題: <span style="background-color: #ffff00;">國立虎尾科技大學 - 機械設計工程系 - cd2025 期末報告 - 學員學號 - 各階段影片主題<br/></span></p>
-<h1>task</h1>
+<h1>list</h1><h1>task</h1>
 <h2>task1</h2>
 <p><span>利用既有的 Python 可攜系統建立各版本的 Python 可攜環境。</span></p>
 <p><span><em><strong>1. </strong></em>下載 <a href="http://229.cycu.org/portable_python311.7z">portable_python311.7z</a>，一套尚未安裝 pip 的 Python 3.11 可攜程式環境。</span></p>
