--- a/content/list.html
+++ b/content/list.html
@@ -2,7 +2,7 @@
         <head>
         <title>cdproject</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/css/bootstrap.min.css">
@@ -142,16 +142,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">3-2video << <a href='3-2video.html'>Previous</a> <a href='Experience.html'>Next</a> >> Experience<br /><h1>3-3video</h1>
-<p><a href="./../downloads/41223147Exam3-3.7z">41223147Exam3-3.7z</a></p>
-<p>41223110</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/DospNNAiXM0?si=hZPowxaGDG6iRwRL" title="YouTube video player" width="560"></iframe></p>
-<p>41223125</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/CaY1aoET-M8" width="450"></iframe></p>
-<p>41223129</p>
-<p><a href="./../downloads/41223132 ex3-3.zip">41223132</a></p>
-<p>41223147</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/q20s75eIMEk?si=DvJXuVFIMumHTwhs" title="YouTube video player" width="450"></iframe></p><br />3-2video << <a href='3-2video.html'>Previous</a> <a href='Experience.html'>Next</a> >> Experience</div>
+    <div id="tipue_search_content">Final << <a href='Final.html'>Previous</a> <a href='task.html'>Next</a> >> task<br /><h1>list</h1><br />Final << <a href='Final.html'>Previous</a> <a href='task.html'>Next</a> >> task</div>
         
     <!-- footer -->
       <div class="container">
