--- a/content/3-2video.html
+++ b/content/3-2video.html
@@ -146,14 +146,15 @@ img.add_border {
 <p><a href="./../downloads/Exam3-2_ag6.zip">/downloads/Exam3-2_ag6.zip</a></p>
 <p><a href="./../downloads/41223147Exam3-2.7z">41223147Exam3-2.7z</a></p>
 <p>41223110</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/zLgNR7Z_PGo?si=D20zMrtplpP6UdDz" title="YouTube video player" width="560"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/zLgNR7Z_PGo?si=D20zMrtplpP6UdDz" title="YouTube video player" width="450"></iframe></p>
 <p>41223125</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/GJCL5xSTpuY" width="450"></iframe></p>
 <p>41223129</p>
+<p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/SOpqWyV0rmY" width="450"></iframe></p>
 <p><a href="./../downloads/41223132ex3-2.zip">41223132</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/rVKSk5w-Xek" width="450"></iframe></p>
 <p>41223147</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/72YDoXhGhnE?si=WNCf8-x6WGd_AEak" title="YouTube video player" width="450"></iframe></p>
-<br />3-1video << <a href='3-1video.html'>Previous</a> <a href='3-3video.html'>Next</a> >> 3-3video</div>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/72YDoXhGhnE?si=WNCf8-x6WGd_AEak" title="YouTube video player" width="450"></iframe></p><br />3-1video << <a href='3-1video.html'>Previous</a> <a href='3-3video.html'>Next</a> >> 3-3video</div>
         
     <!-- footer -->
       <div class="container">
