--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -296,21 +296,22 @@ brython_div1 &lt;= "7. " + html.A("41223147", href="https://mdecd2025.github.io/
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/72YDoXhGhnE?si=WNCf8-x6WGd_AEak" title="YouTube video player" width="450"></iframe></p><h2>3-3video</h2>
 <p><a href="/downloads/41223147Exam3-3.7z">41223147Exam3-3.7z</a></p>
 <p>41223110</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/DospNNAiXM0?si=hZPowxaGDG6iRwRL" title="YouTube video player" width="560"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/DospNNAiXM0?si=hZPowxaGDG6iRwRL" title="YouTube video player" width="450"></iframe></p>
 <p>41223125</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/CaY1aoET-M8" width="450"></iframe></p>
+<p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/CaY1aoET-M8" width="450"></iframe></p>
 <p>41223129</p>
+<p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/qxGmekvwOG4" width="450"></iframe></p>
 <p><a href="/downloads/41223132 ex3-3.zip">41223132</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/-1K1xq5TcE4" width="450"></iframe></p>
 <p>41223147</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/q20s75eIMEk?si=DvJXuVFIMumHTwhs" title="YouTube video player" width="450"></iframe></p>
-<h2>Experience</h2>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/q20s75eIMEk?si=DvJXuVFIMumHTwhs" title="YouTube video player" width="450"></iframe></p><h2>Experience</h2>
 <p><span>41223110:</span></p>
 <p><span>41223125:</span></p>
 <p><span>一切都從模仿開始，在初期根本完全無從下手，只能到他人網站上觀摩，或從他人成品中找出發點，也又是完全沒有搞懂它的運作模式。在考試三中使用IPV6來進行webotsw --steam 內建的動態連結並以server端讓 client端連接後進行控制，一個伺服端可讓多個客戶端連接並在內部webotsw串流執行導入建模及程式的遠端線上控制，而在之中因為基本功不夠時常卡住不知該如何解決，連使用GPT得到文字敘述後也不清楚問題應該從何處解決，這種拋之心血卻無果的心情真的很無助。</span></p>
 <p><span>41223129:</span></p>
 <p><span>41223132:</span></p>
 <p><span>41223147:</span></p>
-<h1>Brython</h1>
+<p><span>開啟webotsw --stream後將電腦的IPV4關閉連線至自己的IPV6，開啟協同串流網站後整組人員需要有一個當伺服器端執行server程式，其他組員當客戶端，在串流平台上輸入的IP位置是伺服器端的人員IP位置，客戶端的組員執行client程式即可，之後再按指令鍵控制變化。操作過程中有多次sever跟client程式沒有輸入相同的IP位置，還有防火牆與proxy沒有設定好會造成伺服器無法抓取到IP位置，我們在這方面還不夠了解所以在這方面要再多探討。</span></p><h1>Brython</h1>
 <p><button id="add1to100">1 add to 100</button></p>
 <!-- 導入 brython 程式庫 -->
 <p>
