--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -309,7 +309,11 @@ brython_div1 &lt;= "7. " + html.A("41223147", href="https://mdecd2025.github.io/
 <p><span>41223125:</span></p>
 <p><span>一切都從模仿開始，在初期根本完全無從下手，只能到他人網站上觀摩，或從他人成品中找出發點，也又是完全沒有搞懂它的運作模式。在考試三中使用IPV6來進行webotsw --steam 內建的動態連結並以server端讓 client端連接後進行控制，一個伺服端可讓多個客戶端連接並在內部webotsw串流執行導入建模及程式的遠端線上控制，而在之中因為基本功不夠時常卡住不知該如何解決，連使用GPT得到文字敘述後也不清楚問題應該從何處解決，這種拋之心血卻無果的心情真的很無助。</span></p>
 <p><span>41223129:</span></p>
+<p><span>輸入webotsw --stream後將電腦的IPV6連線至自己的端點，開啟串流網站後需要有一個人要當伺服器端執行server程式，其他組員當客戶端，在串流平台上輸入的IP位置是伺服器端的人員IP位置，客戶端的組員執行client程式即可，之後再按指令鍵控制變化。操作過程中有多次server跟client程式沒有輸入相同的IP位置會讓伺服器抓取不到IP位置，在這方面還需要再多探討。</span></p>
 <p><span>41223132:</span></p>
+<p><span>3-1:剛開始時沒有設定好，與gpt對話後他給初下列方案，但無法修正，最後問同學才得以解決。解決後，輪流使用客戶端與伺服端嘗試控制，並錄影上傳。</span></p>
+<p><span>3-2:我們用同學的檔案來改成我們這組的成員號碼，在做這個作業時沒有ipv6，於是我們用ipv4來代替，並改寫程式使其使用ipv4。</span></p>
+<p><span>3-3:有了前面的經驗再來做這個就很簡單了，到網站上下載檔案後弄出伺服端與客戶端程式，就能與組員一起控制車子。</span></p>
 <p><span>41223147:</span></p>
 <p><span>開啟webotsw --stream後將電腦的IPV4關閉連線至自己的IPV6，開啟協同串流網站後整組人員需要有一個當伺服器端執行server程式，其他組員當客戶端，在串流平台上輸入的IP位置是伺服器端的人員IP位置，客戶端的組員執行client程式即可，之後再按指令鍵控制變化。操作過程中有多次sever跟client程式沒有輸入相同的IP位置，還有防火牆與proxy沒有設定好會造成伺服器無法抓取到IP位置，我們在這方面還不夠了解所以在這方面要再多探討。</span></p><h1>Brython</h1>
 <p><button id="add1to100">1 add to 100</button></p>
