--- a/config/content.htm
+++ b/config/content.htm
@@ -306,6 +306,7 @@ brython_div1 &lt;= "7. " + html.A("41223147", href="https://mdecd2025.github.io/
 <p>41223147</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/q20s75eIMEk?si=DvJXuVFIMumHTwhs" title="YouTube video player" width="450"></iframe></p><h2>Experience</h2>
 <p><span>41223110:</span></p>
+<p><span>利用webotsw --steam 啟動 webots 的串流，改成外部連接並讓他運作，這時他應該是沒有運行的狀態才對，在 Windows 環境中使用 Edge 連線至 http://localhost:1234 並將 localhost 更改成 sever 端的IP位置，執行 server 然後再執行 client 後進行控制，client的IP位置要是sever端成員的IP位置得以連接，IPV6 或 IPV4 都可連接。</span></p>
 <p><span>41223125:</span></p>
 <p><span>一切都從模仿開始，在初期根本完全無從下手，只能到他人網站上觀摩，或從他人成品中找出發點，也又是完全沒有搞懂它的運作模式。在考試三中使用IPV6來進行webotsw --steam 內建的動態連結並以server端讓 client端連接後進行控制，一個伺服端可讓多個客戶端連接並在內部webotsw串流執行導入建模及程式的遠端線上控制，而在之中因為基本功不夠時常卡住不知該如何解決，連使用GPT得到文字敘述後也不清楚問題應該從何處解決，這種拋之心血卻無果的心情真的很無助。</span></p>
 <p><span>41223129:</span></p>
